...
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/test_size_16sp"
                    />

                <Button
                    android:id="@+id/createAccount"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:background="@drawable/button_create_acount"
                    android:onClick="@{() -> listener.onCreateAccountClick()}"
...
